fixed navigation from shifting upon scrolling

--- a/src/css/grayscale.css
+++ b/src/css/grayscale.css
@@ -70,7 +70,7 @@
   }
   #mainNav.navbar-shrink .nav-link {
     color: #161616;
-    padding: 1.5rem 1.5rem 1.25rem;
+    /* padding: 1.5rem 1.5rem 1.25rem; */
     border-bottom: 0.25rem solid transparent;
   }
   #mainNav.navbar-shrink .nav-link:hover {
@@ -360,4 +360,8 @@ footer {
 
 .project {
   height: fit-content;
+}
+
+.carousel {
+
 }
